	  password.
	- vdeldomain: Fix uninitialized variable warning.

	Tom Collins
	- Fix problems with valias code in vmysql.c and vpgsql.c.  Storing
	  aliases in Postgres should work now, and it should fix problems
	  with processing Maildir valias entries in vdelivermail. [985011,
	  1024706, 1033801]
	- Fix bug in vmoddomlimits that wiped out the Domain Quota 
	  when editing default limits.

5.4.7 - released 23-Sep-04

	Michael Bowe
	- Mention in README.mysql that is is possible to create mailboxes 
	  by inserting entries directly into the MySQL table.

	Tom Collins
	- Don't try to delete dir-control for domain unless users-big-dir
	  is enabled.
	- Verify user exists before trying to set quota in vsetuserquota().
	  [984698]
	- Update cdb/Makefile so you can 'make install' without doing 
	  'make' first.
	- Fix size comparisons to MAX_PW_X (should be ">", not ">=").
	- Fix possible buffer overflows in vsybase.c.
	- Have vconvert reset dir_control and increment it for each user
	  added when converting from cdb to MySQL.
	- If crypt() doesn't support MD5 passwords, fall back to using
	  a valid, non-MD5 salt even if MD5 passwords are enabled.
	- Fix format string vuln. in vactivedir.c (thanks D4rk Eagle).
	- Added comment to vqmaillocal.c mentioning that it isn't
	  maintained and probably doesn't work.  Makefile no longer
	  installs vqmaillocal.

5.4.6 - released 30-Jun-04

	[backport from 5.5.0]
	- Consolidate table creation code in vmysql.c and vpgsql.c.
	- Increase SQL_BUF_SIZE from 600 to 2048 for Oracle, Postgres
	  and Sybase.
	- Multiple fixes to vpgsql.c related to freeing PGresults and
	  attempting to access NULL PGresults when reporting errors.
	* These changes address SQL Injection vulnerability documented in
	* Bugtraq ID 10990 <http://www.securityfocus.com/bid/10990/info/>
	- Add qnprintf() to vpopmail.c for escaping strings in SQL queries.
	- Use qnprintf() when building queries in vmysql.c, vpgsql.c,
	  voracle.pc, and vsybase.c.
